--- a/dataset_generation/test.ipynb
+++ b/dataset_generation/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "0c898482",
    "metadata": {},
    "outputs": [
@@ -10,18 +10,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "7\n",
-      "[107 149]\n",
-      "[62 99]\n",
-      "[14 12]\n",
-      "[<zip object at 0x000001ED6C4DCA40>]\n"
+      "5\n",
+      "3\n",
+      "[253 143 123  63 106]\n",
+      "[ 44 120  49  66 143]\n",
+      "[12 18 15 13 17]\n",
+      "[<zip object at 0x0000025A220A9B40>]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c741fd3a91704f1aa1ad0cfe991fc80a",
+       "model_id": "dde811fd8e1045c5bb338cfe4071639d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,15 +42,10 @@
     "    for i in range(n_images):\n",
     "        canvas = Canvas(width=256, height=179)\n",
     "        n_circles = np.random.randint(1, 6)\n",
-    "        print(n_circles)\n",
     "        n_plates = np.random.randint(1, 8)\n",
-    "        print(n_plates)\n",
     "        x_circle = np.random.randint(0, canvas.width, size=(n_circles))\n",
-    "        print(x_circle)\n",
     "        y_circle = np.random.randint(0, canvas.height, size=(n_circles))\n",
-    "        print(y_circle)\n",
     "        r = np.random.randint(10, 20, size=(n_circles))\n",
-    "        print(r)\n",
     "        x_plates = np.random.randint(0, canvas.width, size=(n_plates))\n",
     "        y_plates = np.random.randint(0, canvas.height, size=(n_plates))\n",
     "        pos_plates = np.array([zip(x_plates, y_plates)])\n",
@@ -64,47 +59,6 @@
     "canvas = draw_and_save(1)\n",
     "\n",
     "display(canvas)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "id": "588415ac",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91af5048cb8849b5baa4d6531147b998",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(height=300, width=300)"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "from ipycanvas import Canvas, hold_canvas\n",
-    "\n",
-    "canvas = Canvas(width=300, height=300)\n",
-    "n_circles = 100\n",
-    "x = np.random.randint(0, canvas.width, size=(n_circles))\n",
-    "y = np.random.randint(0, canvas.width, size=(n_circles))\n",
-    "r = np.random.randint(10, 20, size=(n_circles))\n",
-    "colors_fill = np.random.randint(0, 255, size=(n_circles, 3))\n",
-    "colors_outline = np.random.randint(0, 255, size=(n_circles, 3))\n",
-    "alphas = np.random.random(n_circles)\n",
-    "with hold_canvas():\n",
-    "    canvas.fill_styled_circles(x, y, r, color=colors_fill, alpha=alphas)\n",
-    "    canvas.line_width = 2\n",
-    "    canvas.stroke_styled_circles(x, y, r, color=colors_outline)\n",
-    "canvas"
    ]
   }
  ],
