circles and lines

--- a/dataset_generation/test.ipynb
+++ b/dataset_generation/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "id": "0c898482",
    "metadata": {},
    "outputs": [
@@ -10,18 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "3\n",
-      "[253 143 123  63 106]\n",
-      "[ 44 120  49  66 143]\n",
-      "[12 18 15 13 17]\n",
-      "[<zip object at 0x0000025A220A9B40>]\n"
+      "[(253, 11), (147, 5), (11, 143), (7, 49), (55, 54), (198, 114)]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dde811fd8e1045c5bb338cfe4071639d",
+       "model_id": "8d09ad7276cb42a4b0228ba07e795776",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,24 +37,43 @@
     "    for i in range(n_images):\n",
     "        canvas = Canvas(width=256, height=179)\n",
     "        n_circles = np.random.randint(1, 6)\n",
-    "        n_plates = np.random.randint(1, 8)\n",
+    "        n_plates = np.random.randint(2, 8)\n",
     "        x_circle = np.random.randint(0, canvas.width, size=(n_circles))\n",
+    "        x_circle = x_circle.tolist()\n",
     "        y_circle = np.random.randint(0, canvas.height, size=(n_circles))\n",
+    "        y_circle = y_circle.tolist()\n",
     "        r = np.random.randint(10, 20, size=(n_circles))\n",
+    "        r = r.tolist()\n",
     "        x_plates = np.random.randint(0, canvas.width, size=(n_plates))\n",
     "        y_plates = np.random.randint(0, canvas.height, size=(n_plates))\n",
-    "        pos_plates = np.array([zip(x_plates, y_plates)])\n",
+    "        if len(x_plates) % 2 != 0:\n",
+    "            x_plates = x_plates[:-1]\n",
+    "            y_plates = y_plates[:-1]\n",
+    "        pos_plates = tuple(zip(x_plates, y_plates))\n",
+    "        pos_plates = [(int(x), int(y)) for x, y in zip(x_plates, y_plates)]\n",
     "        print(pos_plates)\n",
     "\n",
-    "        with hold_canvas(canvas):\n",
-    "            canvas.fill_style = 'black'\n",
-    "            canvas.fill_circles(x_circle, y_circle, r)\n",
+    "\n",
+    "        canvas.fill_style = 'black'\n",
+    "        canvas.fill_circles(x_circle, y_circle, r)\n",
+    "        canvas.stroke_style = \"black\"\n",
+    "        canvas.line_width = 2\n",
+    "        for j in range(int(len(x_plates) / 2)):\n",
+    "            canvas.stroke_line(int(pos_plates[j][0]), int(pos_plates[j][1]), int(pos_plates[j + int(len(x_plates) / 2)][0]), int(pos_plates[j + int(len(x_plates) / 2)][1]))\n",
     "        return canvas\n",
     "\n",
     "canvas = draw_and_save(1)\n",
     "\n",
     "display(canvas)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb3d6604",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
