--- a/dataset_generation/test.ipynb
+++ b/dataset_generation/test.ipynb
@@ -2,7 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
+   "id": "4ea9f94d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2cd96d02d82141b7becf6bd61fc7e9c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(height=179, width=256)"
+      ]
+     },
+     "execution_count": 270,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from ipycanvas import Canvas, hold_canvas\n",
+    "from IPython.display import display\n",
+    "\n",
+    "def blob(x, y, r):\n",
+    "    x1, x2 = x\n",
+    "    x3 = int(x1 * 1.2)\n",
+    "    x4 = int(x1 * 1.4)\n",
+    "\n",
+    "    y1 = y\n",
+    "    y2 = int(y1 * 0.8)\n",
+    "    y3 = int(y1 * 1.1)\n",
+    "    y4 = int(y1 * 0.9)\n",
+    "\n",
+    "    r1, r3 = r\n",
+    "    r2 = int(r1 * 0.9)\n",
+    "    r4 = int(r1 * 0.8)\n",
+    "    \n",
+    "    xlst, ylst, rlst = [x1, x2, x3, x4], [y1, y2, y3, y4], [r1, r2, r3, r4]\n",
+    "\n",
+    "    return xlst, ylst, rlst\n",
+    "\n",
+    "\n",
+    "canvas = Canvas(width=256, height=179)\n",
+    "\n",
+    "x1 = 100\n",
+    "x2 = 100\n",
+    "x3 = 120\n",
+    "x4 = 140\n",
+    "\n",
+    "y1 = 100\n",
+    "y2 = 80\n",
+    "y3 = 110\n",
+    "y4 = 90\n",
+    "\n",
+    "r1 = 50\n",
+    "r2 = 45\n",
+    "r3 = 50\n",
+    "r4 = 40\n",
+    "\n",
+    "canvas.fill_style = 'black'\n",
+    "canvas.fill_circle(x1, y1, r1)\n",
+    "canvas.fill_circle(x2, y2, r2)\n",
+    "canvas.fill_circle(x3, y3, r3)\n",
+    "canvas.fill_circle(x4, y4, r4)\n",
+    "\n",
+    "canvas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 424,
    "id": "0c898482",
    "metadata": {},
    "outputs": [
@@ -10,13 +82,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(253, 11), (147, 5), (11, 143), (7, 49), (55, 54), (198, 114)]\n"
+      "[(18, 63), (163, 11), (111, 131), (195, 28)]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d09ad7276cb42a4b0228ba07e795776",
+       "model_id": "fa20a8e76a4c4637b353361158111134",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,14 +108,15 @@
     "def draw_and_save(n_images):\n",
     "    for i in range(n_images):\n",
     "        canvas = Canvas(width=256, height=179)\n",
-    "        n_circles = np.random.randint(1, 6)\n",
-    "        n_plates = np.random.randint(2, 8)\n",
+    "        n_circles = np.random.randint(1, 10)\n",
+    "        n_plates = np.random.randint(2, 16)\n",
     "        x_circle = np.random.randint(0, canvas.width, size=(n_circles))\n",
     "        x_circle = x_circle.tolist()\n",
     "        y_circle = np.random.randint(0, canvas.height, size=(n_circles))\n",
     "        y_circle = y_circle.tolist()\n",
     "        r = np.random.randint(10, 20, size=(n_circles))\n",
     "        r = r.tolist()\n",
+    "\n",
     "        x_plates = np.random.randint(0, canvas.width, size=(n_plates))\n",
     "        y_plates = np.random.randint(0, canvas.height, size=(n_plates))\n",
     "        if len(x_plates) % 2 != 0:\n",
@@ -53,9 +126,16 @@
     "        pos_plates = [(int(x), int(y)) for x, y in zip(x_plates, y_plates)]\n",
     "        print(pos_plates)\n",
     "\n",
+    "        n_arcs = np.random.randint(10, 30)\n",
+    "        x_arcs = np.random.randint(0, canvas.width, size=(n_arcs))\n",
+    "        y_arcs = np.random.randint(0, canvas.height, size=(n_arcs))\n",
+    "        r_arcs = np.random.randint(10, 150, size=(n_arcs))\n",
+    "        start_angle = np.random.randint(0, 360, size=(n_arcs))\n",
+    "        end_angle = start_angle + 0.05\n",
     "\n",
     "        canvas.fill_style = 'black'\n",
     "        canvas.fill_circles(x_circle, y_circle, r)\n",
+    "        canvas.fill_arcs(x_arcs, y_arcs, r_arcs, start_angle, end_angle)\n",
     "        canvas.stroke_style = \"black\"\n",
     "        canvas.line_width = 2\n",
     "        for j in range(int(len(x_plates) / 2)):\n",
@@ -66,14 +146,6 @@
     "\n",
     "display(canvas)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb3d6604",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
